# screenshotscout-python

./: .gitignore  README.md  pyproject.toml
examples/: README.md  async_client.py  binary_capture.py  capture_url.py  json_capture.py
src/screenshotscout/: __init__.py  _response.py  _serialization.py  client.py  errors.py  models.py
tests/: test_async_client.py  test_client.py  test_package.py
