[build-system]
requires = ["hatchling>=1.31,<2"]
build-backend = "hatchling.build"

[project]
name = "screenshotscout"
version = "0.1.0"
description = "Official Python SDK for the Screenshot Scout screenshot API."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Oleksii Velykyi" },
]
keywords = [
  "screenshot",
  "screenshot-api",
  "website-screenshot",
  "webpage-screenshot",
  "url-to-image",
  "sdk",
  "screenshotscout",
]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.28.1,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.5,<2",
  "mypy>=2.3,<3",
  "pytest>=9.1,<10",
  "pytest-asyncio>=1.4,<2",
  "ruff>=0.15,<1",
]

[project.urls]
Homepage = "https://screenshotscout.com"
Repository = "https://github.com/screenshotscout/screenshotscout-python"
Issues = "https://github.com/screenshotscout/screenshotscout-python/issues"

[tool.hatch.build.targets.sdist]
include = [
  "/examples",
  "/src",
  "/tests",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/screenshotscout"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "examples"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
